[package]
name = "rsworld-sys"
version = "0.2.0"
authors = ["BiggieBoo18", "sabamotto"]
edition = "2018"
build   = "build.rs"

license = "MIT"
description = "Rust-World is a WORLD(https://github.com/mmorise/World) wrapper for Rust. "
repository = "https://github.com/sabamotto/Rust-WORLD"
readme = "README.md"
keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]

[dependencies]

[build-dependencies]
cc = "1.0"
